# flight-computer

./: CMakeLists.txt  README.md  platformio.ini
src/: IOManager.cpp  IOManager.h  logger.cpp  logger.h  main.cpp  rocket.cpp  rocket.h  sensors.cpp  sensors.h
src/io/: bmp280.h  bno055.cpp  bno055.h  max-m10s.h  sd.h  w25qxx.h
src/main/: flightDataProcessing.cpp  flightDataProcessing.h  main.cpp
